--- a/create_dataset.ipynb
+++ b/create_dataset.ipynb
@@ -16,7 +16,7 @@
     "for val in range(1, 75+1):\n",
     "    landmarks += ['x{}'.format(val), 'y{}'.format(val), 'z{}'.format(val), 'v{}'.format(val)]\n",
     "\n",
-    "with open('your_csv_file.csv', mode='w', newline='') as f:\n",
+    "with open('datasets/your_csv_file.csv', mode='w', newline='') as f:\n",
     "    csv_writer = csv.writer(f, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "    csv_writer.writerow(landmarks)"
    ]
@@ -100,7 +100,7 @@
     "            \n",
     "           \n",
     "            # Export to CSV \n",
-    "            with open('your_csv_file.csv', mode='a', newline='') as f:\n",
+    "            with open('datasets/your_csv_file.csv', mode='a', newline='') as f:\n",
     "                csv_writer = csv.writer(f, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "                csv_writer.writerow(row) \n",
     "            \n",
