Add NaN if there is only one hand+no row if there is none

--- a/create_dataset.ipynb
+++ b/create_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "id": "89fa2a76-c5ac-48cf-baeb-aeae2e83f349",
    "metadata": {},
    "outputs": [],
@@ -23,10 +23,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "id": "5eb48f95-1d53-4441-8bd3-266ad159b223",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n",
+      "No hand in the camera\n"
+     ]
+    }
+   ],
    "source": [
     "#add the data\n",
     "import mediapipe as mp # Import mediapipe\n",
@@ -34,7 +112,7 @@
     "import numpy as np\n",
     "\n",
     "# le nom de votre classe \n",
-    "class_name = \"your_class\"\n",
+    "class_name = \"alligator\"#your_class\n",
     "mp_drawing = mp.solutions.drawing_utils # Drawing helpers\n",
     "mp_holistic = mp.solutions.holistic # Mediapipe Solutions\n",
     "cap = cv2.VideoCapture(0)\n",
@@ -59,7 +137,6 @@
     "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
     "        \n",
     "    \n",
-    "        \n",
     "        # 2. Right hand\n",
     "        mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS, \n",
     "                                 mp_drawing.DrawingSpec(color=(80,22,10), thickness=2, circle_radius=4),\n",
@@ -81,31 +158,42 @@
     "        # Export coordinates\n",
     "        try:\n",
     "            # Extract Pose landmarks\n",
-    "            pose = results.pose_landmarks.landmark\n",
-    "            pose_row = list(np.array([[landmark.x, landmark.y, landmark.z, landmark.visibility] for landmark in pose]).flatten())\n",
-    "            \n",
+    "            if(results.pose_landmarks==None):\n",
+    "                pose_row=list(np.array(([np.NaN]*4)*33).flatten())\n",
+    "            else:\n",
+    "                pose = results.pose_landmarks.landmark\n",
+    "                pose_row = list(np.array([[landmark.x, landmark.y, landmark.z, landmark.visibility] for landmark in pose]).flatten())\n",
+    "                \n",
     "            # Extract right hand landmarks\n",
-    "            right = results.right_hand_landmarks.landmark\n",
-    "            right_row = list(np.array([[landmark.x, landmark.y, landmark.z, landmark.visibility] for landmark in right]).flatten())\n",
-    "            \n",
+    "            if(results.right_hand_landmarks==None):\n",
+    "                right_row=list(np.array(([np.NaN]*4)*21).flatten())\n",
+    "            else:\n",
+    "                right = results.right_hand_landmarks.landmark\n",
+    "                right_row = list(np.array([[landmark.x, landmark.y, landmark.z, landmark.visibility] for landmark in right]).flatten())\n",
     "            # Extract left hand landmarks\n",
-    "            left = results.left_hand_landmarks.landmark\n",
-    "            left_row = list(np.array([[landmark.x, landmark.y, landmark.z, landmark.visibility] for landmark in left]).flatten())\n",
-    "            \n",
+    "            if(results.left_hand_landmarks==None):\n",
+    "                left_row=list(np.array(([np.NaN]*4)*21).flatten())\n",
+    "            else:\n",
+    "                #right_row=list([np.array(([None]*4)*84)].flatten())\n",
+    "                left = results.left_hand_landmarks.landmark\n",
+    "                left_row = list(np.array([[landmark.x, landmark.y, landmark.z, landmark.visibility] for landmark in left]).flatten())\n",
+    "                \n",
+    "            if(results.left_hand_landmarks==None and results.right_hand_landmarks==None):#if no hand is in the camera, don't insert the row\n",
+    "                raise Exception('No hand is in the camera')\n",
     "            # Concate rows\n",
     "            row = pose_row+right_row+left_row\n",
-    "            #print(len(row))\n",
     "            # Append class name \n",
     "            row.insert(0, class_name)\n",
     "            \n",
     "           \n",
     "            # Export to CSV \n",
-    "            with open('datasets/your_csv_file.csv', mode='a', newline='') as f:\n",
+    "            with open('datasets/your_csv_file.csv', mode='a', newline='') as f:#your_csv_file\n",
     "                csv_writer = csv.writer(f, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "                csv_writer.writerow(row) \n",
     "            \n",
     "        except Exception as e:\n",
-                 print("error in appending landmarks data into csv ..")\n",
+    "            print(e)\n",
+    "            pass\n",
     "            \n",
     "        cv2.imshow('Capturing Landmarks', image)\n",
     "\n",
