--- a/Create_Dataset_Final.ipynb
+++ b/Create_Dataset_Final.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "id": "b7718b78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +19,57 @@
     "for val in range(1, 75+1):\n",
     "    landmarks += ['x{}'.format(val), 'y{}'.format(val), 'z{}'.format(val), 'v{}'.format(val)]\n",
     "\n",
-    "with open('your_csv_file.csv', mode='w', newline='') as f:\n",
+    "with open('datasets/your_csv_file.csv', mode='w', newline='') as f:#your_csv_file\n",
     "    csv_writer = csv.writer(f, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "    csv_writer.writerow(landmarks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "id": "db00cbe4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n",
+      "Error :  No hand is in the camera\n"
+     ]
+    }
+   ],
    "source": [
     "import mediapipe as mp # Import mediapipe\n",
     "import cv2 # Import opencv\n",
@@ -85,6 +127,10 @@
     "        \n",
     "        try:\n",
     "            \n",
+    "            #if no hand is in the camera, don't insert the row    \n",
+    "            if(results.left_hand_landmarks==None and results.right_hand_landmarks==None):\n",
+    "                raise Exception('There is no hand in the picture')    \n",
+    "                \n",
     "            if(results.pose_landmarks==None):\n",
     "                pose_row=list(np.array(([np.NaN])*132).flatten())\n",
     "            else:\n",
@@ -105,6 +151,7 @@
     "                \n",
     "                left = results.left_hand_landmarks.landmark\n",
     "                left_row = list(np.array([[landmark.x, landmark.y, landmark.z, landmark.visibility] for landmark in left]).flatten())\n",
+    "            \n",
     "            # Concate rows\n",
     "            row = pose_row+right_row+left_row\n",
     "            \n",
@@ -113,7 +160,7 @@
     "            \n",
     "           \n",
     "            # Export to CSV \n",
-    "            with open('your_csv_file.csv', mode='a', newline='') as f:\n",
+    "            with open('datasets/your_csv_file.csv', mode='a', newline='') as f:\n",
     "                csv_writer = csv.writer(f, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "                csv_writer.writerow(row) \n",
     "            \n",
@@ -132,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c0f965ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -153,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
