--- a/Create_Dataset_Final.ipynb
+++ b/Create_Dataset_Final.ipynb
@@ -19,7 +19,7 @@
     "for val in range(1, 75+1):\n",
     "    landmarks += ['x{}'.format(val), 'y{}'.format(val), 'z{}'.format(val), 'v{}'.format(val)]\n",
     "\n",
-    "with open('datasets/animals.csv', mode='w', newline='') as f:#your_csv_file\n",
+    "with open('datasets/your_csv_file.csv', mode='w', newline='') as f:#your_csv_file\n",
     "    csv_writer = csv.writer(f, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "    csv_writer.writerow(landmarks)"
    ]
@@ -67,7 +67,7 @@
     "mp_holistic = mp.solutions.holistic # Mediapipe Solutions\n",
     "\n",
     "# le nom de votre classe \n",
-    "class_name = \"butterfly\"\n",
+    "class_name = \"your_class\"\n",
     "\n",
     "cap = cv2.VideoCapture(0)\n",
     "# Initiate holistic model\n",
@@ -146,7 +146,7 @@
     "            \n",
     "           \n",
     "            # Export to CSV \n",
-    "            with open('datasets/animals.csv', mode='a', newline='') as f:\n",
+    "            with open('datasets/your_csv_file.csv', mode='a', newline='') as f:\n",
     "                csv_writer = csv.writer(f, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "                csv_writer.writerow(row) \n",
     "            \n",
